--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -44,7 +44,7 @@
   <body>
     <h1>Basic XHR example</h1>
 
-    <form>
+<!--    <form>
       <label for="verse-choose">Choose a verse</label>
       <select id="verse-choose" name="verse-choose">
         <option>Verse 1</option>
@@ -52,13 +52,13 @@
         <option>Verse 3</option>
         <option>Verse 4</option>
       </select>
-    </form>
+    </form>-->
 
     <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843</em></h2>
 
-    <pre>
+  <!--   <pre>
 
-    </pre>
+    </pre>-->
 
     <script>
       const verseChoose = document.querySelector('select');
