--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -48,6 +48,9 @@
     <form>
       <label for="verse-choose">Дата сегодня?</label>
       document.write(today);
+      <script type="text/javascript">
+      var currentTime = new Date()
+      </script>
       <select id="verse-choose" name="verse-choose">
         <option>Verse 1</option>
         <option>Verse 2</option>
