--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -47,10 +47,8 @@
 
     <form>
       <label for="verse-choose">Дата сегодня?</label>
-      document.write(today);
-      <script type="text/javascript">
-      var currentTime = new Date()
-      </script>
+     <!-- document.write(today);-->
+
       <select id="verse-choose" name="verse-choose">
         <option>Verse 1</option>
         <option>Verse 2</option>
@@ -58,7 +56,11 @@
         <option>Verse 4</option>
       </select>
     </form>
-
+    <h1>
+      <script type="text/javascript">
+      var currentTime = new Date()
+      </script>
+    </h1>
     <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843 Update?</em></h2>
 
     <pre>
