--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -34,8 +34,7 @@
         width: 350px;
         padding: 5px;
       }
-      var today = new Date();
-      alert( today );
+
     </style>
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -58,7 +57,8 @@
     </form>
     <h1>
       <script type="text/javascript">
-      var currentTime = new Date()
+      var today = new Date()
+      document.write(today);
       </script>
     </h1>
     <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843 Update?</em></h2>
