--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -60,7 +60,19 @@
       var today = new Date()
       document.write(today);
       </script>
+     
     </h1>
+    <h4>It is now  
+<script type="text/javascript">
+<!--
+var currentTime = new Date()
+var month = currentTime.getMonth() + 1
+var day = currentTime.getDate()
+var year = currentTime.getFullYear()
+document.write(month + "/" + day + "/" + year)
+//-->
+</script>
+</h4>
     <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843 Update?</em></h2>
 
     <pre>
