--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -63,7 +63,7 @@
      
     </h1>
     <h4>It is now  
-<script type="text/javascript">
+<script>
 <!--
 var currentTime = new Date()
 var month = currentTime.getMonth() + 1
