--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -59,20 +59,11 @@
       <script type="text/javascript">
       var today = new Date()
       document.write(today);
+        console.log(today);
       </script>
      
     </h1>
-    <h4>It is now  
-<script>
-<!--
-var currentTime = new Date()
-var month = currentTime.getMonth() + 1
-var day = currentTime.getDate()
-var year = currentTime.getFullYear()
-document.write(month + "/" + day + "/" + year)
-//-->
-</script>
-</h4>
+
     <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843 Update?</em></h2>
 
     <pre>
