--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -43,10 +43,14 @@
 
   <body>
     <h1>Basic XHR example</h1>
-
+      <script type="text/javascript">
+      var today = new Date()
+      <!--document.write(today);
+      <!--  console.log(today);-->
+      </script>
     <form>
       <label for="verse-choose">Дата сегодня?</label>
-     <!-- document.write(today);-->
+     document.write(today);
 
       <select id="verse-choose" name="verse-choose">
         <option>Verse 1</option>
@@ -55,14 +59,6 @@
         <option>Verse 4</option>
       </select>
     </form>
-    <h1>
-      <script type="text/javascript">
-      var today = new Date()
-      document.write(today);
-        console.log(today);
-      </script>
-     
-    </h1>
 
     <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843 Update?</em></h2>
 
