--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -45,6 +45,8 @@
     <h1>Basic XHR example</h1>
       <script type="text/javascript">
       var today = new Date()
+      var d = new Date();
+document.getElementById("demo").innerHTML = d.getMinutes();
       <!--document.write(today);
       <!--  console.log(today);-->
       </script>
