--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -61,7 +61,7 @@ document.getElementById("demo").innerHTML = d.getMinutes();
         <option>Verse 4</option>
       </select>
     </form>
-
+<p id="today"></p>
     <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843 Update?</em></h2>
 
     <pre>
