--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -66,7 +66,7 @@
     </form>
     
     <h1>
-     <p id="day">.</p><p id="month">.</p><p id="year"></p>
+     <p id="day">.</p><p id="month">.</p><p id="year">3453453</p>
     </h1>
     
     <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843 Update?</em></h2>
