--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -69,6 +69,7 @@
     
     <h1>
      <p id="day">.</p><p id="month">.</p><p id="year"></p>
+      <div id="day">.</div><div id="month">.</div><div id="year"></div>
     </h1>
     
     <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843 Update?</em></h2>
