--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -68,7 +68,7 @@
     </form>
     
     <h1>
-     <p id="day">.</p><p id="month">.</p><p id="year"></p>
+     <!--<p id="day">.</p><p id="month">.</p><p id="year"></p>-->
       <div id="day">.</div><div id="month">.</div><div id="year"></div>
     </h1>
     
