--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -34,7 +34,7 @@
         width: 350px;
         padding: 5px;
       }
-
+      div.inline { float:left; }
     </style>
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -70,7 +70,7 @@
     
     <h1>
      <!--<p id="day">.</p><p id="month">.</p><p id="year"></p>-->
-      <div id="day">.</div><div id="month">.</div><div id="year"></div>
+      <div id="day" class="inline"></div><div id="month"class="inline"></div><div id="year"class="inline"></div>
     </h1>
     
     <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843 Update?</em></h2>
