--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -70,11 +70,11 @@
     
     <h1>
      <!--<p id="day">.</p><p id="month">.</p><p id="year"></p>-->
-      <div id="day" class="inline">,</div>,<div id="month"class="inline">,</div>,<div id="year"class="inline"></div>
+      <div id="day" class="inline"> </div> <div id="month"class="inline"> </div> <div id="year"class="inline"></div>
     </h1>
     <br />
     
-   <p> <h2>The Conqueror Worm, <em>Edgar Allen Poe, 1843 Update?</em></h2></p>
+   <h2> <p> The Conqueror Worm, <em>Edgar Allen Poe, 1843 Update?</p></em></h2>
 
     <pre>
 
