--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -34,7 +34,10 @@
         width: 350px;
         padding: 5px;
       }
-      div.inline { float:left; }
+      div.inline { 
+        float:left;
+        margin: 1em;
+      }
     </style>
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
