--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -36,7 +36,7 @@
       }
       div.inline { 
         float:left;
-        margin: 1em;
+        margin: 10px;
       }
     </style>
     <!--[if lt IE 9]>
