--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -73,7 +73,7 @@
     
     <h1>
      <!--<p id="day">.</p><p id="month">.</p><p id="year"></p>-->
-      <div id="day" class="inline" style="margin: 10px;> </div> <div id="month" class="inline" style="margin: 10px;> </div> <div id="year"class="inline" style="margin: 10px;></div>
+      <div id="day" class="inline" style="margin: 10px;> </div> <div id="month" class="inline" style="margin-left: 10px;> </div> <div id="year"class="inline" style="margin: 10px;></div>
     </h1>
     <br />
     
