--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -35,11 +35,12 @@
         padding: 5px;
       }
       div.inline { 
-        float:left;
+        display: inline-block;
         margin: 10px;
       }
     </style>
     <!--[if lt IE 9]>
+float:left;
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
   </head>
