--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -35,12 +35,11 @@
         padding: 5px;
       }
       div.inline { 
-        display: inline-block;
-        margin: 10px;
+        float:left;
+        margin-left: 70px;
       }
     </style>
     <!--[if lt IE 9]>
-float:left;
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
   </head>
@@ -74,7 +73,7 @@ float:left;
     
     <h1>
      <!--<p id="day">.</p><p id="month">.</p><p id="year"></p>-->
-      <div id="day" class="inline" style="margin: 10px;> </div> <div id="month" class="inline" style="margin-left: 10px;> </div> <div id="year"class="inline" style="margin: 10px;></div>
+      <div id="day" class="inline"> </div> <div id="month" class="inline"> </div> <div id="year"class="inline"></div>
     </h1>
     <br />
     
