--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -34,14 +34,13 @@
         width: 350px;
         padding: 5px;
       }
-      div.inline { 
-        float:left;
-        margin-left:70px;
-      }
+      div.inline { float:left; }
     </style>
+    
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
+    
   </head>
 
   <body>
