--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -73,6 +73,8 @@
     <h1>
      <!--<p id="day">.</p><p id="month">.</p><p id="year"></p>-->
       <div id="day" class="inline"> </div> <div id="month" class="inline"> </div> <div id="year"class="inline"></div>
+      <button><img src="buttom.png" alt="openweathermap" 
+          style="vertical-align: middle"> Верно! </button></p>
     </h1>
     <br />
     
