--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -73,8 +73,9 @@
     <h1>
      <!--<p id="day">.</p><p id="month">.</p><p id="year"></p>-->
       <div id="day" class="inline"> </div> <div id="month" class="inline"> </div> <div id="year"class="inline"></div>
-      <button><img src="buttom2.png" alt="openweathermap" 
-          style="vertical-align: middle"> Верно! </button></p>
+      <button> Верно! </button></p>
+         <!-- <button><img src="buttom2.png" alt="openweathermap" 
+          style="vertical-align: middle"> Верно! </button></p>-->
     </h1>
     <br />
     
