--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -73,7 +73,7 @@
     <h1>
      <!--<p id="day">.</p><p id="month">.</p><p id="year"></p>-->
       <div id="day" class="inline"> </div> <div id="month" class="inline"> </div> <div id="year"class="inline"></div>
-      <button> Верно! </button></p>
+      <button> Верно! </button>
          <!-- <button><img src="buttom2.png" alt="openweathermap" 
           style="vertical-align: middle"> Верно! </button></p>-->
     </h1>
