--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -74,9 +74,9 @@
      <!--<p id="day">.</p><p id="month">.</p><p id="year"></p>-->
       <div id="day" class="inline"> </div> <div id="month" class="inline"> </div> <div id="year"class="inline"></div>
    </h1>
-      <!-- <button> Верно! </button>-->
-         <button><img src="buttom2.png" alt="openweathermap" 
-          style="vertical-align: middle"> Верно! </button>
+     <button> Верно! </button>
+        <!-- <button><img src="buttom2.png" alt="openweathermap" 
+          style="vertical-align: middle"> Верно! </button>-->
     
     <br />
     
