--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -99,8 +99,8 @@
  <!--   verse = verse.replace(" ", "");
  <!--       verse = verse.toLowerCase();
  <!--       let url = verse + '.txt'; -->
- <!--        let url = 'https://api.openweathermap.org/data/2.5/onecall?lat=33.44&lon=-94.04&exclude=hourly,daily&appid=9c9278b6ff53fc3ff704cedb3d0ad747';-->
-        let url = 'test.txt';
+        let url = 'https://api.openweathermap.org/data/2.5/onecall?lat=33.44&lon=-94.04&exclude=hourly,daily&appid=9c9278b6ff53fc3ff704cedb3d0ad747';
+ <!--        let url = 'test.txt';-->
 
         let request = new XMLHttpRequest();
         request.open('GET', url);
