--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -86,7 +86,7 @@
 
     </pre>
 <h2> <p> Check</p></em></h2>
-<h2> <p id="api"> </p></h2>
+<p id="api"> </p>
     <script>
       const verseChoose = document.querySelector('select');
       const poemDisplay = document.querySelector('pre');
@@ -114,8 +114,8 @@
         request.send();
       };
       
-      <!--  var obj = JSON.parse('request.response');-->
-      var obj = JSON.parse('{ "timezone":"Europe/Moscow", "temp":-3.38, "city":"New York"}');
+      var obj = JSON.parse('request.response');
+      <!-- var obj = JSON.parse('{ "timezone":"Europe/Moscow", "temp":-3.38, "city":"New York"}');-->
       document.getElementById("api").innerHTML = obj.timezone + ", " + obj.temp; 
       
 
