--- a/test1/heroes-finished.html
+++ b/test1/heroes-finished.html
@@ -41,7 +41,7 @@
       header.appendChild(myH1);
 
       const myPara = document.createElement('p');
-      myPara.textContent = `Hometown: ${obj['homeTown']} // Formed: ${obj['homeTown']}`;
+      myPara.textContent = `Hometown: ${obj['homeTown']} // (Update?) Formed: ${obj['homeTown']}`;
       header.appendChild(myPara);
     }
 
