--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -129,7 +129,7 @@
       
        <!--        Это можно будет закоментить-->
       updateDisplay('Верно!');
-      verseChoose.value = 'Верно!';
+      <!-- verseChoose.value = 'Верно!';-->
 
     </script>
   </body>
