--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -80,7 +80,7 @@
       <div id="day" class="inline"> </div> <div id="month" class="inline"> </div> <div id="year"class="inline"></div>
    </h1>
     <select id="verse-choose" name="verse-choose">
-     <button> Верно! </button>
+     <button type="button" value="yes"> Верно! </button>
     </select>
         <!-- <button><img src="buttom2.png" alt="openweathermap" 
           style="vertical-align: middle"> Верно! </button>-->
@@ -128,7 +128,7 @@
 
       
        <!--        Это можно будет закоментить-->
-      updateDisplay('Верно!');
+      updateDisplay('yes');
       <!-- verseChoose.value = 'Верно!';-->
 
     </script>
