--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -127,8 +127,8 @@
       
 
       
-       <!--        Это можно будет закоментить-->
-      updateDisplay('yes');
+       <!--        Это можно будет закоментить<!--
+    <!--  updateDisplay('yes');-->
       <!-- verseChoose.value = 'Верно!';-->
 
     </script>
