--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -79,9 +79,9 @@
      <!--<p id="day">.</p><p id="month">.</p><p id="year"></p>-->
       <div id="day" class="inline"> </div> <div id="month" class="inline"> </div> <div id="year"class="inline"></div>
    </h1>
-    <select id="verse-choose" name="verse-choose">
-     <button type="button" value="yes"> Верно! </button>
-    </select>
+   <!-- <select id="verse-choose" name="verse-choose">-->
+     <button id="verse-choose" type="button" value="yes"> Верно! </button>
+   <!--  </select>-->
         <!-- <button><img src="buttom2.png" alt="openweathermap" 
           style="vertical-align: middle"> Верно! </button>-->
     
@@ -95,7 +95,8 @@
 <h2> <p> Check</p></em></h2>
 <p id="api"> </p>
     <script>
-      const verseChoose = document.querySelector('select');
+    <!--   const verseChoose = document.querySelector('select');-->
+      const verseChoose = document.querySelector('button');
       const poemDisplay = document.querySelector('pre');
 
       verseChoose.onchange = function() {
