--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -80,7 +80,7 @@
       <div id="day" class="inline"> </div> <div id="month" class="inline"> </div> <div id="year"class="inline"></div>
    </h1>
    <!-- <select id="verse-choose" name="verse-choose">-->
-     <button id="verse-choose" type="button" value="yes"> Верно! </button>
+     <button type="button" value="yes"> Верно! </button>
    <!--  </select>-->
         <!-- <button><img src="buttom2.png" alt="openweathermap" 
           style="vertical-align: middle"> Верно! </button>-->
