--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -129,8 +129,8 @@
 
       
        <!--        Это можно будет закоментить<!--
-    <!--  updateDisplay('yes');-->
-      <!-- verseChoose.value = 'Верно!';-->
+       updateDisplay('yes');
+       verseChoose.value = 'Верно!';
 
     </script>
   </body>
