--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -80,7 +80,7 @@
       <div id="day" class="inline"> </div> <div id="month" class="inline"> </div> <div id="year"class="inline"></div>
    </h1>
    <!-- <select id="verse-choose" name="verse-choose">-->
-     <button type="button" value="yes"> Верно! </button>
+     <button type="verse" value="verse"> Верно! </button>
    <!--  </select>-->
         <!-- <button><img src="buttom2.png" alt="openweathermap" 
           style="vertical-align: middle"> Верно! </button>-->
@@ -129,8 +129,8 @@
 
       
        <!--        Это можно будет закоментить<!--
-       updateDisplay('yes');
-       verseChoose.value = 'Верно!';
+       updateDisplay('verse');
+       verseChoose.value = 'verse';
 
     </script>
   </body>
