--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -130,7 +130,7 @@
       
        <!--        Это можно будет закоментить<!--
        updateDisplay('verse');
-       verseChoose.value = 'verse';
+      <!-- verseChoose.value = 'verse';-->
 
     </script>
   </body>
