--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -80,7 +80,9 @@
       <div id="day" class="inline"> </div> <div id="month" class="inline"> </div> <div id="year"class="inline"></div>
    </h1>
    <!-- <select id="verse-choose" name="verse-choose">-->
-     <button type="verse" value="verse"> Верно! </button>
+     <button type="verse"> Верно! </button>
+    
+    <!--       <button type="verse" value="verse"> Верно! </button>-->
    <!--  </select>-->
         <!-- <button><img src="buttom2.png" alt="openweathermap" 
           style="vertical-align: middle"> Верно! </button>-->
