--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -80,7 +80,7 @@
       <div id="day" class="inline"> </div> <div id="month" class="inline"> </div> <div id="year"class="inline"></div>
    </h1>
    <!-- <select id="verse-choose" name="verse-choose">-->
-     <button type="verse"> Верно! </button>
+     <button> Верно! </button>
     
     <!--       <button type="verse" value="verse"> Верно! </button>-->
    <!--  </select>-->
