--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -130,8 +130,8 @@
       
 
       
-       <!--        Это можно будет закоментить<!--
-       updateDisplay('verse');
+       <!--        Это можно будет закоментить
+      <!--  updateDisplay('verse');-->
       <!-- verseChoose.value = 'verse';-->
 
     </script>
