--- a/xhr-basic.html
+++ b/xhr-basic.html
@@ -97,8 +97,8 @@
 <h2> <p> Check</p></em></h2>
 <p id="api"> </p>
     <script>
-    <!--   const verseChoose = document.querySelector('select');-->
-      const verseChoose = document.querySelector('button');
+     const verseChoose = document.querySelector('select');
+      <!--  const verseChoose = document.querySelector('button');-->
       const poemDisplay = document.querySelector('pre');
 
       verseChoose.onchange = function() {
