--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <body>
 
-    <h1>Выполнение тестового задания для TeamIdea</h1>
+    <h1 style="color:#363b9d">Выполнение тестового задания для TeamIdea</h1>
     <h2>Дата сегодня?</h2>
 
     
